--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -400,8 +400,7 @@
 **** xref:6.4-release-notes.adoc#additions[Additions]
 **** xref:6.4-release-notes.adoc#changes[Changes]
 **** xref:6.4-release-notes.adoc#bug-fixes[Bug fixes]
-//**** xref:6.4-release-notes.adoc#security-fixes[Security fixes]
-//**** xref:6.4-release-notes.adoc#known-issues[Known issues]
+**** xref:6.4-release-notes.adoc#known-issues[Known issues]
 *** TinyMCE 6.3.2
 **** xref:6.3.2-release-notes.adoc#overview[Overview]
 **** xref:6.3.2-release-notes.adoc:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
