--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -943,7 +943,7 @@ Added a predicate check for inline boundaries before they render, and additional
 
 In {productname} 6.4, it is now not possible to highlight inline boundary elements that are classified as a `contenteditable="false"` content element.
 
-=== Clicking on a disabled split button will no longer call the onAction callback
+=== Clicking on a disabled split button would call the onAction callback
 //#TINY-9504
 
 A bug was found in versions of {productname} prior to the 6.4 release, that would call the `onAction` callback for *split buttons* regardless of the action being `disabled`. This meant it was possible for the user to call `onAction` unintentionally
