--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -47,7 +47,7 @@ tinymce.init({
   selector: "textarea",  // change this value according to your HTML
   advcode_inline: true,
   plugins: [
-    "code", "fullscreen", 'advcode',
+    "fullscreen", 'advcode',
   ],
   toolbar: "code"
 });
