combine the two examples back into one.
Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/pages/dialog-components.adoc
+++ b/modules/ROOT/pages/dialog-components.adoc
@@ -600,6 +600,9 @@ tinymce.init({
                     icon: 'image-options',
                     type: 'menubutton',
                     fetch: (success) => success([
+                      'bold',
+                      'italic',
+                      'underline',
                       {
                           type: 'menuitem',
                           text: 'Menu item',
@@ -623,6 +626,9 @@ tinymce.init({
                         icon: 'image-options',
                         type: 'menubutton',
                         fetch: (success) => success([
+                          'blocks',
+                          'fontfamily',
+                          'fontsize',
                           {
                             type: 'menuitem',
                             text: 'Menu item',
