--- a/modules/ROOT/pages/dialog-components.adoc
+++ b/modules/ROOT/pages/dialog-components.adoc
@@ -551,7 +551,7 @@ A *tree* can include two different items:
 
 A directory item can contain other directory items and leaf items.
 
-
+As well, *tree* items can be set to `+fetch+` other {productname} menus.
 
 ==== Activating items in a tree
 
@@ -636,84 +636,6 @@ tinymce.init({
                               console.log('leaf menu item'); // for demo purposes
                             }
                           }
-                        ])
-                      }
-                    },
-                  ]
-                },
-                {
-                  type: 'leaf',
-                  title: 'Leaf 5',
-                  id: '5'
-                },
-                {
-                  type: 'leaf',
-                  title: 'Leaf 6',
-                  id: '6'
-                },
-              ]
-            }]
-          }
-        });
-      }
-    });
-  },
-});
-----
-
-*tree* items can also be set to `+fetch+` other {productname} menus.
-
-For example: //restructure the example below to present the menus in a more structured fashion?
-
-[source,js]
-----
-tinymce.init({
-  selector: "textarea",
-  toolbar: "tree",
-  setup: (ed) => {
-    ed.ui.registry.addButton('tree', {
-      text: 'Tree toolbar button',
-      onAction: () => {
-        ed.windowManager.open({
-          title: 'Tree dialog',
-          buttons: [{
-	    type: 'cancel',
-	    text: 'Cancel'
-	  }],
-          body : {
-            type: 'panel',
-            items: [{
-              type: 'tree',
-              onLeafAction: (id) => {
-                console.log('clicked on item with id', id);
-              },
-              items: [
-                {
-                  type: 'directory',
-                  id: 'dir',
-                  title: 'Directory',
-                  menu: {
-                    icon: 'image-options',
-                    type: 'menubutton',
-                    fetch: (success) => success([
-		     'bold', 'italic', 'underline'
-                    ])
-                  },
-                  children: [
-                    {
-                      type: 'leaf',
-                      title: 'Leaf 3',
-                      id: '3'
-                    },
-                    {
-                      type: 'leaf',
-                      title: 'Leaf 4',
-                      id: '4',
-                      menu: {
-                        icon: 'image-options',
-                        type: 'menubutton',
-                        fetch: (success) => success([
-			  'blocks', 'fontfamily', 'fontsize'
                         ])
                       }
                     },
